<resources>
    <string name="app_name">Vasinn</string>

    <string-array name="array_months">
        <item>Janúar</item>
        <item>Febrúar</item>
        <item>Mars</item>
        <item>Apríl</item>
        <item>Maí</item>
        <item>Júní</item>
        <item>Júlí</item>
        <item>Ágúst</item>
        <item>September</item>
        <item>Október</item>
        <item>Nóvember</item>
        <item>Desember</item>
    </string-array>

    <string-array name="array_years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
     </string-array>

    <string name="title_section1">Posi</string>
    <string name="title_section2">Söluyfirlit</string>
    <string name="title_section3">Útskrá</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="title_activity_read_card">ReadCardActivity</string>
    <string name="error_communication_nfc">Villa átti sér stað við lestur korts</string>
    <string name="card_read">Kort hefur verið lesið</string>
    <string name="nfc_locked">Kortið er læst</string>
    <string name="error_card_unknown">Óþekkt kort</string>
    <string name="msg_nfc_disable">NFC er ekki virkt</string>
    <string name="msg_activate_nfc">Virkji NFC</string>
    <string name="msg_info">Skilaboð</string>
    <string name="card_reading_title">Les kort</string>
    <string name="card_reading_desc">Sæki upplýsingar...</string>

    <string name="action_settings">Stillingar</string>
    <string name="action_logout">Útskrá</string>
    <string name="username_hint">Notendanafn</string>
    <string name="password_hint">Lykilorð</string>
    <string name="label_login">Innskráning</string>
    <string name="btn_login_text">Innskrá</string>
    <string name="logo_name">logo</string>
    <string name="btn_logout_text">Útskrá</string>
    <string name="x_squared">x^2</string>
    <string name="square_root_symbol">\\u221a</string>
    <string name="skra_value">Skrá upphæð</string>
    <string name="default_calculator_value">0</string>
    <string name="action_help">Hjálp</string>
    <string name="lc_question">Ertu viss?</string>
    <string name="lc_title">Útskráning</string>
    <string name="lc_yes">Já</string>
    <string name="lc_cancel">Hætta við</string>
    <string name="btn_forgot_text">Gleymt lykilorð</string>
    <string name="email">Netfang</string>
    <string name="send">Senda</string>
    <string name="password_sent">Lykilorðið hefur verið sent</string>
    <string name="password_sent_failure">Villa kom upp</string>
    <string name="user_doesnt_exist">Þú ert ekki skráður í kerfið, vinsamlegast skráðu þig á www.vasinn.is</string>
    <string name="forgot_emptyemail">Vinsamlegast sláðu inn netfangið þitt</string>
    <string name="TRANSACTION_KEY_ID">"gens.com.vasinn.TRANSACTION_KEY_ID</string>
    <string name="loggedIn_User"></string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transaction">Framkvæmd gjaldfærsla</string>
    <string name="hello_world">Hello world!</string>
    <string name="transaction_time">Tími:</string>
    <string name="transaction_card">Gerð korts:</string>
    <string name="transaction_amount">Upphæð:</string>
    <string name="button_send_receipt">Senda kvittun</string>
    <string name="button_send_report">Senda tilkynningu</string>
    <string name="button_refund">Bakfæra</string>
    <string name="transaction_username">Starfsmaður:</string>
    <string name="button_back">Til baka</string>
    <string name="transaction_head_text">Upplýsingar um gjaldfærslu</string>
    <string name="VASINN_PREFERENCE">vasinnPreference</string>
    <string name="VASINN_PREFERENCE_USERNAME">myUsername</string>
    <string name="VASINN_PREFERENCE_AMOUNT">vasinn_preference_amount</string>
    <string name="VASINN_CALLING_CLASS">calling_class_name</string>
    <string name="card_is_expired">Kortið er útrunnið</string>
    <string name="btn_confirm">Staðfesta</string>
    <string name="password_title">Vinsamlegast sláðu inn lykilorð</string>
    <string name="get_user_password_title">Sláðu inn lykilorð</string>
    <string name="email_not_registered">Þetta netfang er óskráð</string>
    <string name="email_forgot_password_subject">Gleymt lykilorð</string>
    <string name="email_forgot_password_body_before">Lykilorðið þitt er: </string>
    <string name="email_forgot_password_body_after">.</string>
    <string name="transactions_title">Söluyfirlit</string>
    <string name="username_and_password_do_not_match">Notendanafn og lykilorð stemma ekki</string>
    <string name="card_reader_text_ask_for_card">Vinsamlegast berðu kortið upp að bakhlið tækisins</string>
    <string name="forgot_password_title">Gleymt Lykilorð</string>
    <string name="hint_report_text">Ritaðu hér athugasemdir þínar varðandi þessa færslu</string>
    <string name="report_dialog_title">Senda tilkynningu</string>
    <string name="email_report_subject">Tilkynning vegna færslu</string>
    <string name="email_report_body_before">Athugasemdir starfsmanns:</string>
    <string name="email_report_body_after">Færslu upplýsingar:</string>
    <string name="url_notifycation_link"> http://vasinn.azurewebsites.net/Notification</string>
    <string name="your_notifycations">Þínar tilkynningar:</string>
    <string name="ask_user_email_dialog_title">Netfang viðskiptavinar</string>
    <string name="email_user_receipt_subject">Greiðslukvittun</string>
    <string name="email_receipt_sent_ok">Greiðslukvittun hefur verið send</string>
    <string name="email_receipt_sent_fail">Ekki tókst að senda greiðslukvittun</string>
    <string name="email_report_sent_ok">Tilkynning hefur verið send</string>
    <string name="email_report_sent_fail">Ekki tókst að senda tilkynningu</string>
    <string name="send_report_result_title">Sending tilkynningar</string>
    <string name="help_title">Hjálp</string>
    <string name="user_doesnt_exist_title">Notandi finnst ekki</string>
    <string name="forgot_emptyemail_title">Netfang vantar</string>
    <string name="email_receipt_sent_title">Sending kvittunar</string>
    <string name="password_sent_title">Senda lykilorð</string>
    <string name="email_not_registered_title">Rangt netfang</string>
    <string name="username_and_password_do_not_match_title">Rangt lykilorð</string>
    <string name="button_get_card_number">Skrá kortanúmer</string>
    <string name="type_card_information">Skráðu kortanúmer hér</string>
    <string name="card_number_dialog_charge">Gjaldfæra</string>
    <string name="skra_kortanumer_title">Skrá kortanúmer</string>
    <string name="hint_savety_number">Öryggisnúmer</string>
    <string name="help_details">Með því að smella á \"Staðfesta\" verður þér beint á hjálparsíðu Vasans.</string>
    <string name="logout_check">Ertu viss?</string>
    <string name="logout_title">Útskráning</string>
    <string name="no_transaction_text">Þú átt engar færslur :(</string>
    <string name="posi_title">Posahamur</string>
    <string name="safety_number_wrong_format">Öryggisnúmer þarf að vera þriggja eða fjöggra talna númer.</string>
    <string name="safety_number_title">Öryggisnúmer</string>
    <string name="expiration_date_title">Gildistími korts</string>
</resources>
