<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/LoginTheme"
    tools:context="gens.com.vasinn.LoginActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/label_login"
        android:id="@+id/tViewLoginLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold"
        android:password="false"
        android:clickable="false"
        android:autoText="false" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtLoginUsername"
        android:hint="@string/email"
        android:layout_below="@+id/tViewLoginLabel"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtLoginPassword"
        android:hint="@string/password_hint"
        android:layout_below="@+id/edtLoginUsername"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text"
        android:id="@+id/btnLogin"
        android:onClick="login"
        android:layout_below="@+id/edtLoginPassword"
        android:layout_alignParentStart="true"
        android:background="#107193" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_text"
        android:id="@+id/btnForgot"
        android:onClick="forgotPassword"
        android:background="#ff7c5d93"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>
