<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="gens.com.vasinn.TransactionActivity">

    <TextView android:text="@string/transaction_head_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionTitle"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/tViewIdDesc"
        android:text="ID:"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tViewTransactionTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionID"
        android:text="id færslu"
        android:layout_alignTop="@+id/tViewIdDesc"
        android:layout_toEndOf="@+id/tViewIdDesc" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionTimeDesc"
        android:text="@string/transaction_time"
        android:layout_below="@+id/tViewIdDesc"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionTime"
        android:text="dagsetning hér"
        android:layout_below="@+id/tViewIdDesc"
        android:layout_toEndOf="@+id/tViewTransactionTimeDesc" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionCardDesc"
        android:text="@string/transaction_card"
        android:layout_below="@+id/tViewTransactionTimeDesc"
        android:layout_toStartOf="@+id/tViewTransactionTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionCard"
        android:layout_below="@+id/tViewTransactionTime"
        android:layout_toEndOf="@+id/tViewTransactionCardDesc"
        android:text="Vísa/Master" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionAmountDesc"
        android:text="@string/transaction_amount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tViewUserDesc"
        android:layout_toStartOf="@+id/tViewTransactionUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewTransactionAmount"
        android:text="10.101 kr."
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_alignTop="@+id/tViewTransactionAmountDesc"
        android:layout_toEndOf="@+id/tViewTransactionAmountDesc" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/tViewTransactionAmountDesc"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dialog_padding_top"
        android:id="@+id/linearLayoutTransaction1"
        android:paddingTop="20dp">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_send_receipt"
        android:id="@+id/btnSendReceipt"
        android:onClick="onSendReceiptClick"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/button_default_margin"
        style="@style/buttonDefault"
        />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_send_report"
        android:id="@+id/btnSendReport"
        android:onClick="onSendReportClick"
        android:layout_alignEnd="@+id/tViewTransactionTitle"
        android:layout_marginLeft="@dimen/button_default_margin"
        style="@style/buttonDefault"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTransaction1"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayoutTransaction2">

    <Button

        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_refund"
        android:id="@+id/btnRefund"
        android:onClick="onRefundClick"
        android:layout_alignParentStart="true"
        style="@style/buttonDefault"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/btnTransactionBack"
        android:onClick="onBackClick"
        style="@style/buttonDefault"
        android:layout_toEndOf="@+id/btnRefund"
         />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_username"
        android:id="@+id/tViewUserDesc"
        android:layout_below="@+id/tViewTransactionCardDesc"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="notandanafn"
        android:id="@+id/tViewTransactionUsername"
        android:layout_alignTop="@+id/tViewUserDesc"
        android:layout_alignStart="@+id/tViewTransactionCard" />




</RelativeLayout>
