<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logout_check"
        android:id="@+id/tViewLogoutText"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tViewLogoutText"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dialog_padding_top"
        android:id="@+id/linearLayoutHelp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lc_yes"
            android:id="@+id/btnLogoutConfirm"
            android:layout_below="@+id/tViewLogoutText"
            android:layout_alignStart="@+id/tViewLogoutText"
            style="@style/buttonDefault"/>

        <Button
            style="@style/buttonDefault"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lc_cancel"
            android:id="@+id/btnLogoutCancel"
            android:layout_alignTop="@+id/btnLogoutConfirm"
            android:layout_toEndOf="@+id/btnLogoutConfirm" />

    </LinearLayout>

</RelativeLayout>