<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
   >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtTextPassword"
        android:hint="@string/password_hint"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/dialog_padding_top" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTextPassword"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dialog_padding_top"
        android:id="@+id/linearLayout">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:id="@+id/btnConfirmPassword"
        android:layout_below="@+id/edtTextPassword"
        android:layout_alignStart="@+id/edtTextPassword"
        android:layout_marginRight="@dimen/button_default_margin"
        android:background="@color/default_dialog_button_bg"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/lc_cancel"
        android:id="@+id/btnCancelPassword"
        android:layout_alignTop="@+id/btnConfirmPassword"
        android:layout_toEndOf="@+id/btnConfirmPassword"
        android:layout_marginLeft="@dimen/button_default_margin"
        android:background="@color/default_dialog_button_bg"
        />
    </LinearLayout>

</RelativeLayout>