<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="gens.com.vasinn.dialogs.CardNumberDialog">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayoutCardNumberDlg">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:hint="@string/type_card_information"
        android:id="@+id/edtCardNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutCardNumberDlg"
        android:weightSum="2"
        android:layout_margin="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/card_number_dialog_charge"
                android:id="@+id/btnChargeCardGetNumber"
                android:layout_below="@+id/relativeLayout"
                android:layout_alignParentStart="true"
                style="@style/buttonDefault"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lc_cancel"
                android:id="@+id/btnCancelCardGetNumber"
                android:layout_alignBottom="@+id/button"
                android:layout_toEndOf="@+id/button"
                style="@style/buttonDefault"/>
    </LinearLayout>

</RelativeLayout>
